- Fixed bug #26407 (Result set fetching broken around transactions)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@151420 c90b9560-bf6c-de11-be94-00142212c4b1